--- a/main.html
+++ b/main.html
@@ -1,16 +1,83 @@
 <!DOCTYPE html>
 
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Inception - Movie Webpage</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+        }
+        header, nav, section, aside, footer {
+            margin-bottom: 20px;
+            padding: 10px;
+        }
+        header {
+            background-color: #222;
+            color: #fff;
+        }
+        nav a {
+            margin-right: 15px;
+            text-decoration: none;
+            color: #0066cc;
+        }
+        aside {
+            background-color: #f4f4f4;
+        }
+        footer {
+            text-align: center;
+            font-weight: bold;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <header>
+        <h1>Inception</h1>
+        <p>A mind-bending science fiction thriller</p>
+    </header>
+
+    <nav>
+        <p>
+            <a id="nav-actor" href="#actor">Actors</a>
+            <a id="nav-quote" href="#quote">Quotes</a>
+        </p>
+    </nav>
+
+    <section id="summary">
+        <h2>Summary</h2>
+        <p>
+            Inception follows Dom Cobb, a skilled thief who steals secrets from deep within the subconscious during dreams. He is given a chance at redemption when offered a final job: planting an idea into someone's mind instead of stealing one.
+        </p>
+    </section>
+
+    <section id="actor">
+        <h2>Actors</h2>
+        <p>
+            The movie stars Leonardo DiCaprio as Dom Cobb, alongside Joseph Gordon-Levitt, Ellen Page, Tom Hardy, and Ken Watanabe, all delivering memorable performances.
+        </p>
+    </section>
+
+    <section id="quote">
+        <h2>Favorite Quote</h2>
+        <p>
+            “You mustn’t be afraid to dream a little bigger, darling.”
+        </p>
+    </section>
+
+    <aside>
+        <p>
+            IMDb Rating: 8.8/10<br>
+            Release Date: July 16, 2010
+        </p>
+    </aside>
+
+    <footer>
+        <p>Produced by: Emma Thomas</p>
+    </footer>
 
 </body>
-
 </html>
