--- a/main.html
+++ b/main.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Inception - Movie Webpage</title>
+    <title>Krrish - Movie Webpage</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,16 +14,17 @@
             padding: 10px;
         }
         header {
-            background-color: #222;
-            color: #fff;
+            background-color: #1e1e1e;
+            color: white;
         }
         nav a {
             margin-right: 15px;
             text-decoration: none;
-            color: #0066cc;
+            color: #0073e6;
+            font-weight: bold;
         }
         aside {
-            background-color: #f4f4f4;
+            background-color: #f2f2f2;
         }
         footer {
             text-align: center;
@@ -36,8 +35,8 @@
 <body>
 
     <header>
-        <h1>Inception</h1>
-        <p>A mind-bending science fiction thriller</p>
+        <h1>Krrish</h1>
+        <p>An Indian superhero film</p>
     </header>
 
     <nav>
@@ -50,33 +49,33 @@
     <section id="summary">
         <h2>Summary</h2>
         <p>
-            Inception follows Dom Cobb, a skilled thief who steals secrets from deep within the subconscious during dreams. He is given a chance at redemption when offered a final job: planting an idea into someone's mind instead of stealing one.
+            Krrish is the story of Krishna, a young man with extraordinary powers who uses his abilities to help others and fight evil, eventually becoming the superhero Krrish.
         </p>
     </section>
 
     <section id="actor">
         <h2>Actors</h2>
         <p>
-            The movie stars Leonardo DiCaprio as Dom Cobb, alongside Joseph Gordon-Levitt, Ellen Page, Tom Hardy, and Ken Watanabe, all delivering memorable performances.
+            The movie stars Hrithik Roshan in a dual role, along with Priyanka Chopra, Rekha, Naseeruddin Shah, and Sharat Saxena.
         </p>
     </section>
 
     <section id="quote">
         <h2>Favorite Quote</h2>
         <p>
-            “You mustn’t be afraid to dream a little bigger, darling.”
+            “Dil an liya dil na diya tho bolo na bolo kya kiya”
         </p>
     </section>
 
     <aside>
         <p>
-            IMDb Rating: 8.8/10<br>
-            Release Date: July 16, 2010
+            IMDb Rating: 6.4/10<br>
+            Release Date: June 23, 2006
         </p>
     </aside>
 
     <footer>
-        <p>Produced by: Emma Thomas</p>
+        <p>Produced by: Rakesh Roshan</p>
     </footer>
 
 </body>
