--- a/main.html
+++ b/main.html
@@ -1,81 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Krrish - Movie Webpage</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            line-height: 1.6;
-        }
-        header, nav, section, aside, footer {
-            margin-bottom: 20px;
-            padding: 10px;
-        }
-        header {
-            background-color: #1e1e1e;
-            color: white;
-        }
-        nav a {
-            margin-right: 15px;
-            text-decoration: none;
-            color: #0073e6;
-            font-weight: bold;
-        }
-        aside {
-            background-color: #f2f2f2;
-        }
-        footer {
-            text-align: center;
-            font-weight: bold;
-        }
-    </style>
+    <title>Inception - Movie Page</title>
 </head>
 <body>
 
+    <!-- Header -->
     <header>
-        <h1>Krrish</h1>
-        <p>An Indian superhero film</p>
+        <h1>Inception</h1>
     </header>
 
+    <!-- Navigation -->
     <nav>
-        <p>
-            <a id="nav-actor" href="#actor">Actors</a>
-            <a id="nav-quote" href="#quote">Quotes</a>
-        </p>
+        <a id="nav-actor" href="#actor">Actors</a> |
+        <a id="nav-quote" href="#quote">Quotes</a>
     </nav>
 
-    <section id="summary">
-        <h2>Summary</h2>
-        <p>
-            Krrish is the story of Krishna, a young man with extraordinary powers who uses his abilities to help others and fight evil, eventually becoming the superhero Krrish.
-        </p>
-    </section>
+    <!-- Summary -->
+    <summary>
+        Inception is a science fiction thriller directed by Christopher Nolan.
+        The story follows a skilled thief who steals secrets through dream-sharing technology.
+        He is given a chance to erase his criminal history by planting an idea into a target's subconscious.
+    </summary>
 
+    <!-- Actors Section -->
     <section id="actor">
-        <h2>Actors</h2>
-        <p>
-            The movie stars Hrithik Roshan in a dual role, along with Priyanka Chopra, Rekha, Naseeruddin Shah, and Sharat Saxena.
-        </p>
+        <h2>Main Actors</h2>
+        <p>Leonardo DiCaprio as Dom Cobb</p>
+        <p>Joseph Gordon-Levitt as Arthur</p>
+        <p>Elliot Page as Ariadne</p>
+        <p>Tom Hardy as Eames</p>
     </section>
 
+    <!-- Quote Section -->
     <section id="quote">
-        <h2>Favorite Quote</h2>
-        <p>
-            “Dil an liya dil na diya tho bolo na bolo kya kiya”
-        </p>
+        <h2>Famous Quote</h2>
+        <p>"You mustn't be afraid to dream a little bigger, darling."</p>
     </section>
 
+    <!-- Aside -->
     <aside>
-        <p>
-            IMDb Rating: 6.4/10<br>
-            Release Date: June 23, 2006
-        </p>
+        <p><strong>IMDb Rating:</strong> 8.8/10</p>
+        <p><strong>Release Date:</strong> 16 July 2010</p>
     </aside>
 
+    <!-- Footer -->
     <footer>
-        <p>Produced by: Rakesh Roshan</p>
+        Produced by: Emma Thomas
     </footer>
 
 </body>
